<resources>
    <string name="app_name">Super Cache Cleaner Ram Booster</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mb">0MB</string>
    <string name="unit">MB</string>
    <string name="freeable">Freeable</string>
    <string name="total">Total: %1$s</string>
    <string name="ram_booster">RAM Booster</string>
    <string name="no_running_apps_found">No app found in background</string>
    <string name="cpu_cooler">CPU Cooler</string>
    <string name="close">Close</string>
    <string name="congratulations">Congratulations</string>
    <string name="ram_is_boosted">RAM Boosted</string>
    <string name="cpu_is_cooled">CPU Cooled</string>
    <string name="ram_boosted">RamBoosted</string>
    <string name="application_name">Application Name</string>
    <string name="uninstall">Uninstall</string>
    <string name="apk_files_tab">APK Files</string>
    <string name="package_colon">package:</string>
    <string name="please_confirm">Please confirm</string>
    <string name="are_you_sure_to_uninstall">Are you sure you want to uninstall the selected apps?</string>
    <string name="uninstall_apps">Uninstall (%1$d) Apps</string>
    <string name="app_icon">Application Icon</string>
    <string name="package_name">Package Name</string>
    <string name="delete_apps">Delete (%1$d) Apk Files</string>
    <string name="install_apps">Install (%1$d) Apps</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete the selected apk files?</string>
    <string name="are_you_sure_to_install">Are you sure you want to install the selected apps?</string>
    <string name="delete">Delete</string>
    <string name="install">Install</string>
    <string name="no_apk_found">No Apk file(s) found</string>
    <string name="social_apps_cleaner">Social Apps Cleaner</string>
    <string name="no_social_app_found">No Social App found</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="social_app">Social App</string>
    <string name="clean">Clean</string>
    <string name="videos">Videos</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_cleaner">WhatsApp Cleaner</string>
    <string name="images">Images</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_cleaner">Instagram Cleaner</string>
    <string name="audios">Audios</string>
    <string name="documents">Documents</string>
    <string name="are_you_sure_to_clean">Are you sure you want to clean all the content?</string>
    <string name="social_cleaner">%1$s Cleaner</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_cleaner">Facebook Cleaner</string>
    <string name="messenger">Messenger</string>
    <string name="messenger_cleaner">Messenger Cleaner</string>
    <string name="snapchat">Snapchat</string>
    <string name="snapchat_cleaner">Snapchat Cleaner</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_cleaner">Twitter Cleaner</string>
    <string name="others">Others</string>
    <string name="dcim">DCIM</string>
    <string name="pictures">Pictures</string>
    <string name="movies">Movies</string>
    <string name="n_audios">%1$d audio(s)</string>
    <string name="n_documents">%1$d document(s)</string>
    <string name="n_images">%1$d image(s)</string>
    <string name="n_others">%1$d other(s)</string>
    <string name="n_videos">%1$d video(s)</string>
    <string name="kb">0 KB</string>
    <string name="show_more">Show More</string>
    <string name="removing_content">Removing content</string>
    <string name="content_not_found">Content not found</string>
    <string name="remove_content">Remove (%1$s)</string>
    <string name="are_you_sure_to_remove">Are you sure you want to remove the selected content files?</string>
    <string name="remove">Remove</string>
    <string name="detail_content">Content Detail</string>
    <string name="percent">%1$d%2$s</string>
    <string name="stats">%1$s / %2$s</string>
    <string name="storage">Storage</string>

    <string name="title_activity_junk_clean">Recommended Cleaning</string>
    <string name="do_junk_clean">Clean up</string>

    <string name="byte_short">B</string>
    <!-- Suffix added to a number to signify size in kilobytes. -->
    <string name="kilo_byte_short">KB</string>
    <!-- Suffix added to a number to signify size in megabytes. -->
    <string name="mega_byte_short">MB</string>
    <!-- Suffix added to a number to signify size in gigabytes. -->
    <string name="giga_byte_short">GB</string>
    <!-- Suffix added to a number to signify size in terabytes. -->
    <string name="tera_byte_short">TB</string>
    <!-- Suffix added to a number to signify size in petabytes. -->
    <string name="peta_byte_short">PB</string>

    <string name="clean_file_size_suffix">%1$s%2$s</string>
    <string name="action_settings">Settings</string>
    <string name="junk_clean">Junk Clean</string>
    <string name="process_clean">Process Clean</string>
    <string name="apk_clean">APK Files</string>
    <string name="tmp_clean">Temporary Files</string>
    <string name="log_clean">Log files</string>
    <string name="cache_clean">Cache Garbage</string>
    <string name="system_cache">System Cache</string>
    <string name="memory">Phone Memory</string>
    <string name="no_apps_consuming_cpu">No apps are consuming CPU</string>

    <string name="cool">Cool</string>
    <string name="cool_cpu">CPU Cool Down</string>
    <string name="cpu_cooled">CpuCooled</string>
    <string name="high">High</string>
    <string name="temperature">%1$s °C</string>
    <string name="temperature_label">Cpu temperature is %1$s</string>

    <string name="ad">Ad</string>
    <string name="exit_app">Exit Application</string>
    <string name="are_you_sure_to_exit">Are you sure you want to exit the application?</string>
    <string name="rate_uss">Rate us</string>

    <string name="native_ad_unit">ca-app-pub-4712843478748935/8823419497</string>
    <string name="exit_banner_ad_unit">ca-app-pub-4712843478748935/8823419497</string>
    <string name="interstitial_ad_unit">ca-app-pub-4712843478748935/6935622757</string>
    <string name="banner_ad_unit">ca-app-pub-4712843478748935/8823419497</string>
    <string name="app_id">ca-app-pub-4712843478748935~7155114601</string>


    <string name="debugFbPlacementId">385272365651439_385753322270010</string>
    <string name="debugFbPlacementIdInterstitial">385272365651439_385770348934974</string>

   <!-- <string name="debugFbPlacementId">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="debugFbPlacementIdInterstitial">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>-->

    <string name="fbAppId">385272365651439</string>
    <!--<string name="fbPlacementId"></string>-->

</resources>
