<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryBooster">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ToolbarColoredBackArrow"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:title="@string/ram_booster"
            app:titleTextColor="@android:color/white" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/stat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ImageView
                android:id="@+id/round_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_loading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/round_bg"
                app:layout_constraintEnd_toEndOf="@+id/round_bg"
                app:layout_constraintStart_toStartOf="@+id/round_bg"
                app:layout_constraintTop_toTopOf="@+id/round_bg"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loader.json"
                app:lottie_loop="true" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/round_bg"
                app:layout_constraintEnd_toEndOf="@+id/round_bg"
                app:layout_constraintStart_toStartOf="@+id/round_bg"
                app:layout_constraintTop_toTopOf="@+id/round_bg">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/mb"
                    android:textColor="@android:color/white"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/unit"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:text="@string/unit"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="@+id/total"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/total"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/selected"

                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/total"
                    app:layout_constraintVertical_bias=".3" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat_container" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/running_apps_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/storage_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/boost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ram_booster"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_booster" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_booster"
            android:drawablePadding="10dp"
            android:text="@string/no_running_apps_found"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/running_apps_list"
            app:layout_constraintStart_toStartOf="@+id/running_apps_list"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rocket_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryBooster"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat_container">

            <ImageView
                android:id="@+id/rocket"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cpu_cooler" />
        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/congrats_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:scrollbars="none"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/done"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="@drawable/round_boosted"
                    android:contentDescription="@string/close"
                    app:srcCompat="@drawable/ic_close" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/congrats"
                    android:layout_width="300dp"
                    android:layout_height="169dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/congratulations"
                    app:lottie_autoPlay="false"
                    app:lottie_fileName="star_success.json"
                    app:lottie_loop="true" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ram_is_boosted"
                    android:textColor="@color/colorPrimaryBooster"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/tick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/round_boosted"
                    android:contentDescription="@string/cpu_is_cooled"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_checked" />


                <LinearLayout
                    android:id="@+id/ad_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>