<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/round_bg"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias=".12"
            android:src="@drawable/round_bg"
            app:layout_constraintBottom_toTopOf="@+id/scan_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/round_bg"
            app:layout_constraintEnd_toEndOf="@+id/round_bg"
            app:layout_constraintStart_toStartOf="@+id/round_bg"
            app:layout_constraintTop_toTopOf="@+id/round_bg">

            <TextView
                android:id="@+id/storage_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/percent"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/storage_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/stats"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/storage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/storage"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="155dp"
            android:layout_height="43dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/scan_button_bg"
            android:text="SCAN"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium.Inverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>